bad/bin_op_lth_int_string.example_compiler_output
ERROR
[1mbad/bin_op_lth_int_string.lat:3:5: [1;31merror: [0;1moperator < is defined only for int values and string values, not `int` and `string`[m
	42 < "";
	   [1;32m^[m
